# terra2D

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/camera/: mod.rs
src/editor/: mod.rs
src/shaders/fragment/: sprite.fs  sprite.spv
src/shaders/vertex/: sprite.spv  sprite.vs
src/sprite/: mod.rs
src/sprite/loader/: mod.rs
src/sprite/renderer/: mod.rs
src/terra/: mod.rs
src/terra/context/: mod.rs
src/terra/data/: mod.rs
src/terra/programs/sprite/: mod.rs
src/terra/programs/sprite/data/: mod.rs
src/terra/renderer/: mod.rs
src/terra/resources/: mod.rs
src/terra/resources/gpu/: mod.rs
src/terra/resources/graphics/: mod.rs
src/terra/shader/loader/: mod.rs
src/terra/util/: mod.rs
src/terra/vertex/: mod.rs
src/transform/: mod.rs
